route to get analytics from branch
