# src/infra/http/routes/analytics.ts
@@ -8,5 +8,6 @@ const route = Router();
 const analyticController = container.resolve(AnalyticController);
 
 route.get('/cylinder', analyticController.getDayData.bind(analyticController));
+route.get('/branch', analyticController.getAnalyticsFromBranch.bind(analyticController));
 
 export default route;
